@@ -50,7 +50,7 @@ id_def( DIAMOND       , DIAMOND           ,          , av )
 id_def( F12_DIVIDE    , DIVIDE            ,          , av )
 id_def( DL            , ---               ,          , qf )
 id_def( F12_DOMINO    , QUAD_DIVIDE       ,          , av )
-id_def( F12_DROP      , UP_ARROW          ,          , av )
+id_def( F12_DROP      , DOWN_ARROW        ,          , av )
 id_def( EA            , ---               , = 0x4501 , qf )
 id_def( OPER1_EACH    , DIAERESIS         ,          , av )
 id_def( EC            , ---               ,          , qf )
